<resources>
    <string name="app_name">SuitemdiaMD</string>
    <string name="palindrome">Palindrome</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="third_screen">Third Screen</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="input_name">Input Name</string>
    <string name="choose_a_user">Choose a user</string>
    <string name="welcome">Welcome</string>
    <string name="second_screen">Second Screen</string>
    <string name="retry">Retry</string>
</resources>